# django-flow-forge

./: .gitignore  404.html  Dockerfile  LICENSE  MANIFEST.in  README.md  count_code.py  docker-compose-local.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  deploy-mkdocs.yml  publish-to-pypi.yml
authorization/: index.html
considerations/: index.html
data_science_experiments/: index.html
debugging/: index.html
django_flow_forge/: admin.py  apps.py  async_utils.py  authorization.py  auto_register_pipelines.py  batch_utils.py  flow_engine.py  models.py  pipeline_engine.py  task_utils.py  tasks_db.py  tests.py  urls.py  views.py
django_flow_forge/migrations/: 0001_initial.py  0002_alter_executedflow_status_alter_executedtask_status.py  0002_processtask_task_output.py  0003_alter_executedtask_exceptions.py  0004_alter_executedflow_exceptions_and_more.py  0005_alter_flow_options.py  0006_flowtask_code_flowtask_docstring.py  0007_executedflow_params.py  0007_rename_bidirectional_dependencies_processtask_depends_bidirectionally_with.py  0008_executedflow_meta.py  0009_flowbatch_flowbatchtempdata.py  0009_processrun_taskrun.py  0010_batchhandler.py  0011_remove_flowbatchtempdata_batch_and_more.py  0012_process_process_display_name_and_more.py  0012_rename_total_batches_batchhandler_total_batch_count.py  0013_remove_batchtempdata_batch_handler_flowbatch_and_more.py  0013_remove_taskrun_task_snapshot_and_more.py  0014_delete_batchtempdata.py  0014_taskrun_task_snapshot_id_alter_taskrun_task.py  0015_alter_taskrun_output.py  0015_batchhandler_date_initialised.py  0016_executedflow_flow_batch.py  0017_alter_executedflow_options.py  0018_mlmodel.py  0019_executedprocess_process_id_snapshot_and_more.py  0019_remove_mlresult_metrics_mlresult_evaluation_metrics_and_more.py  0020_executedtask_task_name_snapshot.py  0020_remove_mlresult_feature_importances.py  0021_alter_executedprocess_process_id_snapshot_and_more.py  0021_remove_mlresult_notes_mlresult_metadata.py  0022_executedprocess_status.py  0022_rename_executedflow_executedpipeline_and_more.py  0023_alter_pipeline_options_and_more.py  0024_pipelinetask_verbose_name.py  0026_executedprocess_exceptions_and_more.py  (+6 more)
django_mlops/: admin.py  decorators.py  models.py  task_utils.py  tasks_db.py  tests.py  urls.py  views.py
docs/: authorization.md  considerations.md  data_science_experiments.md  debugging.md  flows_dashboard.md  index.md  installation.md  roadmap.md  strategies.md
example_project/: db.sqlite3-shm  db.sqlite3-wal  run_tasks_no_server.py
flows_dashboard/: index.html
installation/: index.html
roadmap/: index.html
search/: search_index.json
strategies/: index.html
(+115 files in other folders)
