[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-flow-forge"
version = "0.4.3.1"
description = "Eliminate unnecessary system complexity in Data Ops and in Machine Learning Ops (MLOps) with this Django module for defining, running and monitoring flows."
authors = [{name = "Ed Burmicz", email = "eddyojb@gmail.com"}]
readme = "README.md"
license = {text = "MIT"} 
keywords = ["django", "mlops", "data", "machine learning", "data science", "pipelines", "flow", "orchestration", "AI",]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=5",
    "django-htmx",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/eddyojb88/django-flow-forge"
